--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +26,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/express-rate-limit": "^5.1.0",
     "@types/helmet": "^0.0.48",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
