--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint": "^7.11.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "sequelize-cli": "^6.2.0"
   },
   "keywords": [
     "grocery",
