Added user password forgot and reset feature
Created email service, check email, password, token for forgot password middlewares. Created email templates, email action. Improved create-tokens function. Updated postman collection and README.

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,24 @@
 PORT=
 
+FRONTEND_URL=
+
+ROOT_EMAIL=
+ROOT_EMAIL_PASS=
+ROOT_EMAIL_SERVICE=
+
 DB_NAME=
 DB_USER=
 DB_PASS=
 DB_HOST=
 
 ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_LIFETIME=
+
+ACCESS_TOKEN_RESET_PASSWORD_SECRET=
+ACCESS_TOKEN_RESET_PASSWORD_LIFETIME=
+
 REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_LIFETIME=
 
 WHITE_LIST=
 
