--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.9.3",
     "dotenv": "^8.2.0",
+    "email-templates": "^7.1.2",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
@@ -20,6 +21,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.14",
     "sequelize": "^6.3.5",
     "winston": "^3.3.3"
   },
